# Reloaded.Memory.Buffers

./: .gitmodules  404.html  README.md  appveyor.yml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: build-and-publish.yml  rust-cargo-test.yml  rust-wine-test.yml  rust.yml
Docs/: Getting-Started.md  What-this-library-is-not.md  Why-was-this-made.md
Reloaded/: LICENSE  mkdocs.yml
Reloaded/Images/: Nexus-Heart.psd  Reloaded-Templates.7z
Reloaded/Pages/: index.html
Reloaded/Pages/contributing/: index.html
Reloaded/Pages/license/: index.html
Reloaded/Pages/testing-zone/: index.html
Reloaded/Readme/: index.html
Reloaded/Stylesheets/: extra.css
Reloaded/docs/Pages/: index.html
Reloaded/docs/Pages/contributing/: index.html
Reloaded/docs/Pages/license/: index.html
Reloaded/docs/Pages/testing-zone/: index.html
Source/: Reloaded.Memory.Buffers.sln
Source/Reloaded.Memory.Buffers/: MemoryBuffer.cs  MemoryBufferHelper.cs  MemoryBufferProperties.cs  MemoryBufferSearcher.cs  MemoryPages.cs  PrivateMemoryBuffer.cs  Reloaded.Memory.Buffers.csproj
Source/Reloaded.Memory.Buffers.Tests/: MemoryBufferTests.cs  Reloaded.Memory.Buffers.Tests.csproj  coverage.json
Source/Reloaded.Memory.Buffers.Tests.x86/: Reloaded.Memory.Buffers.Tests.x86.csproj
Source/Reloaded.Memory.Buffers.Tests/Helpers/: RandomByteArray.cs  RandomIntStruct.cs
Source/Reloaded.Memory.Buffers/Internal/: MemoryBufferFactory.cs  MemoryBufferSearcher.cs
Source/Reloaded.Memory.Buffers/Internal/Kernel32/: Kernel32.cs
Source/Reloaded.Memory.Buffers/Internal/Structs/: AddressRange.cs  (+2 more)
Source/Reloaded.Memory.Buffers/Structs/: AddressRange.cs  BufferAllocationProperties.cs  MemoryBufferHeader.cs  MemoryBufferMagic.cs
Source/Reloaded.Memory.Buffers/Testing/: Buffers.cs
Source/Reloaded.Memory.Buffers/Utilities/: Mathematics.cs  VirtualAllocUtility.cs  VirtualQueryUtility.cs
docs/: Getting-Started.md  What-this-library-is-not.md  Why-was-this-made.md  index.md
docs/specification/: allocation-algorithm.md  buffer-locator.md  buffer.md  overview.md
search/: search_index.json
specification/allocation-algorithm/: index.html
specification/buffer-locator/: index.html
specification/overview/: index.html
src/: Reloaded.Memory.Buffers.sln
src-rust/: .gitignore  Cargo.toml  build-linux.ps1  build-macos.ps1  build-wine.ps1  build.rs  cbindgen.toml  cbindgen_c.toml  guide.txt  test-linux-86.ps1
src-rust/.cargo/: config.toml
src-rust/benches/: my_benchmark.rs
src-rust/src/: buffers.rs  buffers_api.rs  lib.rs
src-rust/src/c/: buffers_c_buffers.rs  buffers_c_locatoritem.rs  buffers_fnptr.rs
src-rust/src/internal/: buffer_allocator.rs  buffer_allocator_linux.rs  buffer_allocator_mmap_rs.rs  buffer_allocator_osx.rs  buffer_allocator_windows.rs  locator_header_finder.rs  memory_mapped_file.rs  memory_mapped_file_unix.rs  memory_mapped_file_windows.rs
src-rust/src/structs/: private_allocation.rs  safe_locator_item.rs
src-rust/src/structs/errors/: buffer_allocation_error.rs  buffer_search_error.rs  item_allocation_error.rs
src-rust/src/structs/internal/: locator_header.rs  locator_item.rs
src-rust/src/structs/params/: buffer_allocator_settings.rs  buffer_search_settings.rs
src-rust/src/utilities/: address_range.rs  cached.rs  disable_write_xor_execute.rs  icache_clear.rs  linux_map_parser.rs  map_parser_utilities.rs  mathematics.rs  wrappers.rs
src/Reloaded.Memory.Buffers/: BufferAllocator.Linux.cs  BufferAllocator.OSX.cs  BufferAllocator.Windows.cs  BufferAllocator.cs  BufferLocator.cs  BufferLocatorFinder.Posix.cs  BufferLocatorFinder.cs  Buffers.cs  Reloaded.Memory.Buffers.csproj  Usings.cs
src/Reloaded.Memory.Buffers.Tests/: Assets.cs  Reloaded.Memory.Buffers.Tests.csproj  Startup.cs
src/Reloaded.Memory.Buffers.Tests/Attributes/: AutoLocatorHeader.cs
src/Reloaded.Memory.Buffers.Tests/Tests/: BufferAllocatorTests.Allocation.ExternalProcess.cs  BufferAllocatorTests.Allocation.cs  BufferAllocatorTests.Common.cs  BufferLocator.cs  BufferLocatorTests.cs  BufferTests.cs
src/Reloaded.Memory.Buffers.Tests/Utilities/: PackingTestHelpers.cs  Permutations.cs
src/Reloaded.Memory.Buffers/Exceptions/: MemoryBufferAllocationException.cs  ThrowHelpers.cs
src/Reloaded.Memory.Buffers/Internal/: BufferAllocator.Linux.cs  BufferAllocator.OSX.cs  BufferAllocator.Windows.cs  BufferAllocator.cs  LocatorHeaderFinder.Posix.cs  LocatorHeaderFinder.cs
src/Reloaded.Memory.Buffers/Native/: IMemoryMappedFile.cs  LinuxMemoryMappedFile.cs  Posix.cs  UnixMemoryMappedFile.cs  WindowsMemoryMappedFile.cs
src/Reloaded.Memory.Buffers/Structs/: AllocatedBufferMap.cs  LocatorHeader.cs  LocatorItem.cs  PrivateAllocation.cs  SafeLocatorItem.cs
src/Reloaded.Memory.Buffers/Utilities/: AddressRange.cs  Cached.cs  LinuxMapParser.cs  Mathematics.cs  Polyfills.cs
(+23 files in other folders)
