[package]
name = "reloaded-memory-buffers"
version = "3.0.1"
edition = "2021"
authors = [ "sewer56" ]
documentation = "https://reloaded-project.github.io/Reloaded.Memory.Buffers/"
readme = "../README.md"
repository = "https://github.com/Reloaded-Project/Reloaded.Memory.Buffers"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.9.0"
libc = "0.2.146"
sysinfo = "0.29.2"
lazy_static = "1.4.0"
dirs = "5.0.1"
errno = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]