[package]
name = "reloaded-memory-buffers"
version = "3.1.3"
edition = "2021"
authors = [ "sewer56" ]
description = "Shared, Concurrent, Permanent Memory Allocator tied to Process Lifetime"
documentation = "https://reloaded-project.github.io/Reloaded.Memory.Buffers/"
readme = "../README.md"
repository = "https://github.com/Reloaded-Project/Reloaded.Memory.Buffers"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
memoffset = "0.9.0"
lazy_static = "1.4.0"
dirs = "5.0.1"
errno = "0.3.1"

[dev-dependencies]
rstest = "0.18.1"
criterion = "0.5.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.146"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
mmap-rs = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]

# Benchmarks
[[bench]]
name = "my_benchmark"
harness = false

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"
