[package]
name = "reloaded-memory-buffers"
version = "4.1.0"
edition = "2021"
authors = [ "sewer56" ]
description = "Shared, Concurrent, Permanent Memory Allocator tied to Process Lifetime"
documentation = "https://reloaded-project.github.io/Reloaded.Memory.Buffers/"
readme = "../README.md"
repository = "https://github.com/Reloaded-Project/Reloaded.Memory.Buffers"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = [] # Better thread yield
external_processes = [] # Support for external processes in Windows
c_exports = []
no_format = [] # Removes string formatting (less detailed errors) for binary size.
all_private = [] # No memory mapped files, memory is not shared.
size_opt = ["nightly"]
nightly = [] # Optimizations for nightly builds.
mmap-rs = [] # Uses mmap-rs for memory mapping. This is auto activated during build.

[dependencies]
concat-string = "1.0.1"
memoffset = "0.9.0"
errno = "0.3.3"
spin = "0.9.8"
itoa = "1.0.10"
nanokit = { version = "0.1.0", features = ["no-inline-concat"] }

[dev-dependencies]
rstest = "0.18.1"
criterion = "0.5.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.146"

[target.'cfg(all(unix, not(target_os = "android")))'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
ahash = "0.8.9"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
mmap-rs-with-map-from-existing = "0.6.0"
clf = "0.1.7"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security"
]

# Benchmarks
[[bench]]
name = "my_benchmark"
harness = false

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = "fat"
strip = true  # Automatically strip symbols from the binary.
panic = "abort"